Fixed incorrect link

--- a/content/docs/Miss Fortune/Builds/13.10 Guide.md
+++ b/content/docs/Miss Fortune/Builds/13.10 Guide.md
@@ -16,8 +16,8 @@ There is no true "Best" Build for all games. The "Best" build is a situational o
 Build high Effective HP against Burst. Bloodline tends to be somewhat better at this metric
 - [PTA Alacrity Rengar TK_ADEHP_BURST]({{< ref "RawData/PTA Alacrity/Rengar TK_ADEHP_BURST" >}})
 - [PTA Alacrity Vex TK_APEHP_BURST]({{< ref "RawData/PTA Alacrity/Vex TK_APEHP_BURST" >}})
-- [PTA Bloodline Rengar TK_ADEHP_BURST]({{< ref "RawData/PTA Alacrity/Rengar TK_ADEHP_BURST" >}})
-- [PTA Bloodline Vex TK_APEHP_BURST]({{< ref "RawData/PTA Alacrity/Vex TK_APEHP_BURST" >}})
+- [PTA Bloodline Rengar TK_ADEHP_BURST]({{< ref "RawData/PTA Bloodline/Rengar TK_ADEHP_BURST" >}})
+- [PTA Bloodline Vex TK_APEHP_BURST]({{< ref "RawData/PTA Bloodline/Vex TK_APEHP_BURST" >}})
 
 ## Win Condition: Taking down the fed Riven / Insert Bruiser Here = win game 
 
@@ -41,6 +41,7 @@ In the late game, use builds with a fast kill time to effective HP ratio
 
 Use an anti tank build. We dont want to get killed by the tank either, so effective HP against the tank's damage type is important
 - [PTA Alacrity Chogath TK_APEHP]({{< ref "RawData/PTA Alacrity/Chogath TK_APEHP" >}})
+- [PTA Bloodline Chogath TK_APEHP]({{< ref "RawData/PTA Bloodline/Chogath TK_APEHP" >}})
 
 ## Win Condition: Surviving Lane = win game 
 This happens when facing an enemy ADC who has a strong early game and weak late game. One example would be Draven
